# FR3VLA

./: .gitignore  .gitmodules  pyproject.toml
Agentic-Robot/: .gitignore  README.md  main.py
Agentic-Robot/server_scripts/: run_Youtu-VL.sh  run_qwen35b_model.sh
Agentic-Robot/src/: depth_camera.py
Agentic-Robot/test_scripts/: test_bbox.py  yolo_test.py
CAD/Mount_Adapter_5mm_Downunder/: adapter_franka_realhand_adapter.step  adapter_realsense_plate_D405.step
CAD/RealHand_L6_Mount_Interface/: Hand_Connection_Bottom_of_Hand.step
Module_Tests/Franka_Examples/: async_position_control.py  cartesian_pose_example.py  cartesian_velocity_example.py  example_common.py  joint_impedance_example.py  joint_position_example.py  joint_velocity_example.py  move_gripper.py  print_robot_state.py
Module_Tests/Tests_Realhand/: 3_Pressure_Joint_Time_Plot.py  test3.py
Module_Tests/Working_Tests/: README.md  _working_test_utils.py  _xyz_coord_math_common.py  camera_access_test1.py  charuco_detection_video_test24.py  config_dynamics_test6.py  config_dynamics_test8.py  d435_bird_eye_check_test23.py  franka_pose_delta_test26.py  hand_eye_check_test11.py  hand_eye_check_test13.py  intrinsics_check_test10.py  intrinsics_check_test12.py  llm_connection_test4.py  llm_connection_test6.py  llm_grounding_test5.py  llm_grounding_test7.py  llm_hallucinations_test10.py  llm_hallucinations_test8.py  llm_image_capability_test29.py  llm_pixel_annotation_test30.py  math_edge_cases_test7.py  memory_pruning_test11.py  memory_pruning_test9.py  run_unit_tests.py  synced_depth_images_test5.py  synced_snapshot_test2.py  unit_calibration_math_test14.py  unit_calibration_math_test16.py  unit_camera_sync_test19.py  unit_camera_viewer_test27.py  unit_charuco_utils_test20.py  unit_charuco_utils_test22.py  unit_config_and_imports_test12.py  unit_config_and_imports_test14.py  unit_coordinates_test13.py  unit_coordinates_test15.py  unit_dispatcher_test18.py  unit_dispatcher_test20.py  unit_llm_tool_loop_test28.py  (+7 more)
Old_Module_Tests/Realhand/: .gitignore
Old_Module_Tests/Working_Tests/: README.md  _extrinsic_check_utils.py  _working_test_utils.py  camera_access_test1.py  d405_hand_eye_check_test13.py  extrinsics_physical_validation_test31.py  intrinsics_check_test12.py  llm_hallucinations_test10.py  llm_pixel_annotation_test30.py  llm_pixel_coordinate_capability_test32.py  math_edge_cases_test9.py  synced_snapshot_test2.py  unit_camera_sync_test21.py  unit_charuco_utils_test22.py  (+5 more)
Old_Working/: config.py  main.py
Working/: config.py  main.py
Working/Camera_Calibration/: CMakeLists.txt  README.md  __init__.py  calibrate_d405_hand_eye.py  calibrate_d435_bird_eye.py  calibration_config.yaml  calibration_math.py  package.xml  state_recorder.py
Working/Camera_Calibration/launch/: calibrate_d405_hand_eye.launch  calibrate_d435_bird_eye.launch
Working/policy/: base.py  (+5 more)
src/: LLM_interface.py  tools.py
test_scripts/: openai-api_test.py
(+76 files in other folders)
